--- a/css/style.css
+++ b/css/style.css
@@ -1,167 +1,234 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+
 body {
-  width: 1280px;
-  height: 2762px;
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #333333;
   background-color: #f2f2f2;
 }
 
- .housing {
-  width: 98px;
-  height: 12px;
-  font-family: PTSans;
-  font-size: 14px;
-  font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.86;
-  letter-spacing: normal;
-  text-align: center;
-  color: #000000;
+img {
+  max-width: 100%;
 }
 
-.card {
-  width: 90px;
-  height: 10px;
-  font-family: PTSans;
-  font-size: 14px;
-  font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.86;
-  letter-spacing: normal;
-  text-align: center;
-  color: #000000;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-.gen {
-  width: 93px;
-  height: 12px;
-  font-family: PTSans;
-  font-size: 14px;
-  font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.86;
-  letter-spacing: normal;
-  text-align: center;
-  color: #000000;
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
-.survey {
-  width: 98px;
-  height: 12px;
-  font-family: PTSans;
-  font-size: 14px;
-  font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.86;
-  letter-spacing: normal;
-  text-align: center;
-  color: #000000;
+
+.site-navigation a[href]:hover {
+ color: #81b3d2;
 }
 
-.headline {
-  width: 440px;
-  height: 48px;
-  font-family: PTSans;
+.site-navigation a[href]:active {
+ color: rgba(0, 0, 0, 0.3);
+}
+
+.feature__title {
   font-size: 21px;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
   line-height: 1.24;
-  letter-spacing: normal;
   text-align: center;
+  color: #000000;
+}
+
+.feature__text {
+  line-height: 1.86;
+  text-align: center;
+}
+
+.main-sign {
+  text-align: center;
+  color: #ffffff;
+  background-color: #81b3d2;
+}
+
+.main-sign h3 {
+  font-size: 21px;
+  font-weight: bold;
+}
+
+.features h3 {
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 1;
+  text-align: center;
+  color: #000000;
+}
+
+.features p {
+  text-align: center;
+}
+
+.main-comfort {
+  background-color: #eeeeee;
+}
+
+.main-comfort h3 {
+  font-size: 21px;
+  font-weight: bold;
+  text-align: center;
+  color: #000000;
+}
+
+.main-comfort p {
+  text-align: center;
+}
+
+.detail {
+  width: 110px;
+  height: 27px;
+  padding-left: 17px;
+  padding-right: 17px;
+  padding-top: 8px;
+  padding-bottom: 7px;
+  box-sizing: border-box;
+  font-weight: bold;
+  line-height: 1.5;
+  text-align: left;
+  color: #ffffff;
+  background-color: #81b3d2;
+}
+
+.detail:hover {
+  background-color: #669ec0;
+}
+
+.detail:active {
+  background-color: #5496bd;
+}
+
+.reservation {
+  width: 142px;
+  height: 27px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-weight: bold;
+  text-align: left;
+  color: #ffffff;
+  background-color: #766357;
+  box-sizing: border-box;
+}
+
+.reservation:hover {
+  background-color: #604e43;
+}
+
+.reservation:active {
+  background-color: #503e33;
+}
+
+.catalog-navigation {
+  font-size: 12px;
+  line-height: 1.5;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.catalog-navigation__item {
+  color: #81b3d2;
+}
+
+.catalog-navigation a:hover {
+  color: #81b3d2;
+}
+
+.catalog-navigation a:active {
   color: #000000;
 }
 
 .hotels__title {
-  width: 210px;
-  height: 16px;
-  font-family: PTSans;
-  font-size: 21px;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
   line-height: 1.24;
   letter-spacing: normal;
   text-align: left;
   color: #000000;
 }
 
-.hotels__type {
-  width: 77px;
-  height: 12px;
-  font-family: PTSans;
-  font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
-  text-align: left;
-  color: #333333;
+.hotels__title:hover {
+  color: #81b3d2;
 }
 
-.hotels__price {
-  width: 66px;
-  height: 11px;
-  font-family: PTSans;
-  font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
-  text-align: left;
-  color: #333333;
+.hotels__title:active {
+  color: rgba(0, 0, 0, 0.3);
 }
 
-.detail {
-  width: 76px;
-  height: 12px;
-  background-color: #81b3d2;
-  font-family: PTSans;
-  font-size: 14px;
+.scan {
+  font-size: 21px;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
-  text-align: left;
-  color: #ffffff;
-}
-
-.reservation {
-  width: 110px;
-  height: 11px;
-  background-color: #766357;
-  font-family: PTSans;
-  font-size: 14px;
-  font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
-  text-align: left;
-  color: #ffffff;
-}
-
-.hotels__rate-text {
-  width: 81px;
-  height: 16px;
-  font-family: PTSans;
-  font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
+  line-height: 1.24;
   text-align: center;
-  color: #666666;
+  color: #ffffff;
+  width: 568px;
+  height: 86px;
+  padding-left: 140px;
+  padding-right: 139px;
+  padding-top: 34px;
+  padding-bottom: 34px;
+  background-color: #766357;
+  box-sizing: border-box;
 }
 
-.main-footer {
-  width: 1200px;
-  height: 120px;
+.scan:hover {
+  background-color: #604e43;
 }
 
+.scan:active {
+  background-color: #503e33;
+}
+
+.button {
+  font-size: 21px;
+  font-weight: bold;
+  text-align: center;
+  color: #ffffff;
+  width: 458px;
+  height: 58px;
+  padding-left: 196px;
+  padding-right: 197px;
+  padding-top: 16px;
+  padding-bottom: 22px;
+  background-color: #81b3d2;
+  box-sizing: border-box;
+}
+
+.button:hover {
+  background-color: #669ec0;
+}
+
+.button:active {
+  background-color: #5496bd;
+}
+
+.social-button {
+  width: 46px;
+  height: 48px;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 15px;
+  padding-bottom: 16px;
+  object-fit: contain;
+  background-color: #81b3d2;
+  box-sizing: border-box;
+}
