--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a {
  color: rgba(0, 0, 0, 0.3);
 }
 
-.active {
+.housing__active {
   color: #766357;
 }
 
@@ -143,15 +143,16 @@ a {
   color: #81b3d2;
 }
 
-.catalog-navigation a:hover {
+.catalog-navigation a[href]:hover {
   color: #81b3d2;
 }
 
-.catalog-navigation a:active {
+.catalog-navigation a[href]:active {
   color: #000000;
 }
 
 .hotels__title {
+  font-size: 21px;
   font-weight: bold;
   line-height: 1.24;
   color: #000000;
@@ -243,10 +244,12 @@ a {
   color: #000000;
 }
 
-.hotels__desc {
-  box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
-}
-
 .hotels__rate-text {
   color: #666666;
+}
+
+b {
+  line-height: 1.86;
+  text-align: center;
+  color: #000000;
 }
