--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ a {
   box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
-
 .site-navigation a[href]:hover {
  color: #81b3d2;
 }
@@ -253,4 +252,93 @@ a {
   font-weight: normal;
   text-align: center;
   color: #000000;
+}
+
+/* Стили для блоков */
+body {
+  background-color: red;
+}
+
+body > * {
+  background-color: rgba(255, 0, 0, 0.3);
+}
+
+body > * > * {
+  background-color: rgba(255, 255, 0, 0.3);
+}
+
+body > * > * > * {
+  background-color: rgba(0, 0, 255, 0.3);
+}
+
+body > * > * > * > * {
+  background-color: rgba(0, 255, 255, 0.3);
+}
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.main-header {
+  margin-bottom: 60px;
+
+  /* Временно для сетки */
+  min-height: 285px;
+}
+
+.legend {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ /* Временно для сетки */
+ min-height: 285px;
+ background-color: transparent;
+}
+
+.main-header-logo {
+  order: 2;
+ width: 140px;
+  height: 71px;
+
+  /* Временно для сетки */
+  /* display: block; */
+}
+
+.main-navigation-wrapper {
+  width: 100%;
+  margin-bottom: 60px;
+
+  background-color: #000000;
+
+  /* Временно для сетки */
+  min-height: 70px;
+  background-color: transparent;
+}
+
+.main-navigation-wrapper .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.site-navigation {
+  width: 1200px;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+
+  /* Временно для сетки */
+  min-height: 70px;
+}
+
+.features-list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+
+  min-height: 170px;
 }
