--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,12 @@ a {
   line-height: 1.24;
   text-align: center;
   color: #000000;
+  margin: 0;
 }
 
 .feature__text {
   line-height: 1.86;
+  margin: 0;
 }
 .main-city {
   display: flex;
@@ -121,6 +123,11 @@ a {
 .main-sign h3 {
   font-size: 21px;
   font-weight: bold;
+  margin: 0;
+}
+
+.main-sign p{
+  margin: 0;
 }
 
 .features-list {
@@ -137,10 +144,12 @@ a {
   line-height: 1;
   text-align: center;
   color: #000000;
+  margin: 0;
 }
 
 .features p {
   text-align: center;
+  margin: 0;
 }
 
 .main-comfort {
@@ -160,10 +169,12 @@ a {
   font-weight: bold;
   text-align: center;
   color: #000000;
+  margin: 0;
 }
 
 .main-comfort p {
   text-align: center;
+  margin: 0;
 }
 
 .detail {
@@ -277,17 +288,20 @@ a {
   line-height: 1.2;
   color: #000000;
   text-align: center;
+  margin: 0;
 }
 
 .map__desc {
   line-height: 1.71;
   text-align: center;
+  margin: 0;
 }
 
 .map__item {
   font-weight: bold;
   line-height: 1.86;
   color: #000000;
+  margin: 0;
 }
 
 .main-footer {
@@ -297,6 +311,8 @@ a {
 .footer-social {
   display: flex;
   flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
 }
 
 .main-footer-tag {
@@ -304,6 +320,7 @@ a {
   font-weight: bold;
   line-height: 1.24;
   color: #000000;
+  margin: 0;
 }
 
 .main-footer-tag b {
@@ -320,10 +337,28 @@ a {
   font-weight: normal;
   color: #000000;
 }
+
+.footer-copyright {
+  margin: 0;
+}
+
 /* Стили для страницы hotel.html */
+
+.services-infrastructure h2 {
+  margin: 0;
+}
+
 .compare {
   display: flex;
   flex-wrap: wrap;
+}
+
+.compare h2 {
+  margin: 0;
+}
+
+.compare p {
+  margin: 0
 }
 
 .hotels__list {
@@ -336,6 +371,8 @@ a {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .hotels__item {
@@ -345,4 +382,22 @@ a {
 
 .hotels__rate {
   margin-left: 0;
+}
+
+.hotels__rate-text {
+  margin: 0;
+}
+
+.hotels__type {
+  margin: 0;
+}
+
+.hotels__price {
+  margin: 0;
+}
+
+.map__item button, input {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
