--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ body {
 
 img {
   max-width: 100%;
-  margin: 30px 30px 30px 0;
 }
 
 a {
@@ -169,10 +168,14 @@ a {
 .main-sign h3 {
   font-size: 21px;
   font-weight: bold;
-  margin: 0;
+  margin: 0 0 10px;
 }
 
-.main-sign p {
+.main-sign__number {
+  margin: 0 0 10px;
+}
+
+.main-sign__text {
   margin: 0;
 }
 
@@ -286,7 +289,7 @@ a {
 }
 
 .hotels__info {
-  margin: 30px 538px 17px 0;
+  margin: 0 538px 0 30px;
 }
 
 .hotels__title {
@@ -390,6 +393,7 @@ a {
 }
 
 .footer-social {
+  width: 400px;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -401,6 +405,7 @@ a {
 }
 
 .main-footer-tag {
+  width: 400px;
   font-size: 21px;
   font-weight: bold;
   line-height: 1.24;
@@ -424,6 +429,7 @@ a {
 }
 
 .footer-copyright {
+  width: 400px;
   margin: 0;
 }
 
@@ -468,6 +474,7 @@ a {
 .hotels__item {
   display: flex;
   flex-wrap: wrap;
+  padding: 30px 0;
 }
 
 .hotels__rate {
