--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ a {
 }
 
 .hotels__info {
-  margin: 0 538px 0 30px;
+  margin: 0 528px 0 30px;
 }
 
 .hotels__title {
@@ -348,7 +348,7 @@ a {
   width: 561px;
   margin-left: auto;
   margin-right: auto;
-  padding: 55px;
+  padding: 11px 55px 55px;
 }
 
 .map__item__option {
@@ -418,14 +418,18 @@ a {
 
 .main-footer {
   display: flex;
+  background-color: #f2f2f2;
+  padding: 36px 132px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-social {
   width: 400px;
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
-  padding: 41px 121px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-social li {
@@ -443,8 +447,8 @@ a {
   font-weight: bold;
   line-height: 1.24;
   color: #000000;
-  margin: 0;
-  padding: 52px 132px;
+  padding-left: auto;
+  padding-right: auto;
 }
 
 .main-footer-tag b {
@@ -452,21 +456,17 @@ a {
   color: #000000;
 }
 
-.hotels__rate-text {
-  color: #666666;
-}
-
 .footer-copyright b {
   line-height: 1.86;
   font-weight: normal;
   color: #000000;
-  margin: auto
+  margin: auto;
 }
 
 .footer-copyright {
   width: 400px;
-  margin: 0;
-  padding: 40px 101px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Стили для страницы hotel.html */
@@ -491,7 +491,7 @@ a {
 
 .hotels__list {
   list-style: none;
-  padding: 0 72px;
+  padding: 0;
   margin-top: 0;
 }
 
@@ -510,14 +510,46 @@ a {
 .hotels__item {
   display: flex;
   flex-wrap: wrap;
-  padding: 30px 0;
+  padding: 30px 72px;
+  border-bottom: 1px solid black;
 }
 
 .hotels__rate {
+  width: 108px;
+  text-align: right;
   margin-left: 0;
 }
 
+.hotels__rate-star {
+  display: inline-block;
+  height: 17px;
+  margin: 0 0 52px;
+  background-image: url("../img/star.svg");
+  background-size: 22px 17px;
+}
+
+.star-1 {
+  width: 18px;
+}
+
+.star-2 {
+  width: 41px;
+}
+
+.star-3 {
+  width: 64px;
+}
+
+.star-4 {
+  width: 87px;
+}
+
+.star-5 {
+  width: 110px;
+}
+
 .hotels__rate-text {
+  color: #666666;
   margin: 0;
 }
 
@@ -546,4 +578,33 @@ a {
 
 .number {
   width: 38px;
+}
+
+.pointer {
+  width: 11px;
+  height: 10px;
+}
+
+.pointer__up path {
+  fill:#cacaca;
+}
+
+.pointer__up:hover path {
+  fill: #000000;
+}
+
+.pointer__up:active path {
+  fill: #81b3d2;
+}
+
+.pointer__down path {
+  fill: #81b3d2;
+}
+
+.pointer__down:hover path {
+  fill: #000000;
+}
+
+.pointer__down:active path {
+  fill: #81b3d2;
 }
