--- a/css/style.css
+++ b/css/style.css
@@ -323,16 +323,17 @@ a {
 }
 
 .scan {
-    display: block;
-    width: 561px;
-    text-align: center;
-    font-weight: bold;
-    line-height: 1.24;
-    color: #ffffff;
-    background-color: #766357;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 34px 140px;
+  display: block;
+  width: 561px;
+  text-align: center;
+  font-weight: bold;
+  line-height: 1.24;
+  font-size: 21px;
+  color: #ffffff;
+  background-color: #766357;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 35px 134px;
 }
 
 .scan:hover {
@@ -465,10 +466,13 @@ a {
 
 .footer-copyright {
   width: 400px;
-  margin: 0;
-  padding: 0 95px;
+    margin: 0;
+    padding: 10px 95px;
 }
 
+.footer-copyright img {
+  margin: -13px 0;
+}
 
 /* Стили для страницы hotel.html */
 
@@ -569,7 +573,7 @@ a {
     background-color: #f2f2f2;
 }
 
-.map__item img {
+.map__item operator {
   width: 21px;
   height: 21px;
 }
