--- a/css/style.css
+++ b/css/style.css
@@ -1,325 +1,323 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 body {
-    font-family: "PT Sans", "Arial", sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.5;
-    text-transform: uppercase;
-    color: #333333;
-    background-color: #f2f2f2;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.5;
+  text-transform: uppercase;
+  color: #333333;
+  background-color: #f2f2f2;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .outline {
-    outline: 1px solid red;
+  outline: 1px solid red;
 }
 
 .container {
-    width: 1200px;
-    margin: 0 auto;
-    background-color: #ffffff;
-    box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
+  width: 1200px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
 }
 
 .main-header {
-    display: flex;
+  display: flex;
 }
 
 .main-navigation {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 .main-header-logo {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .site-navigation {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    font-weight: bold;
-    margin: 0;
-    padding: 0 72px;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  font-weight: bold;
+  margin: 0;
+  padding: 0 72px;
 }
 
 .site-navigation li {
-    width: 203px;
-    padding-right: 15px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    word-break: break-all;
+  width: 203px;
+  padding-right: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  word-break: break-all;
 }
 
 .site-navigation li:nth-child(2n) {
-    margin-right: 244px;
+  margin-right: 244px;
 }
 
 .site-navigation li:nth-child(3n) {
-    text-align: right;
-    padding-right: 0;
+  text-align: right;
+  padding-right: 0;
 }
 
 .site-navigation li:nth-child(4n) {
-    margin-right: 0;
-    text-align: right;
-    padding-right: 0;
-    padding-left: 15px;
+  margin-right: 0;
+  text-align: right;
+  padding-right: 0;
+  padding-left: 15px;
 }
 
 .site-navigation a[href]:hover {
-    color: #81b3d2;
+  color: #81b3d2;
 }
 
 .site-navigation a[href]:active {
-    color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .site-navigation .active {
-    color: #766357;
+  color: #766357;
 }
 
 .legend {
-    text-align: center;
-    min-height: 508px;
-    background-color: #5496bd;
-    background-image: url("../img/intro-mask.svg"), url("../img/background-photo.jpg");
-    background-repeat: no-repeat;
-    background-position: center calc(100% + 1px), center -80px;
-    padding: 76px;
+  text-align: center;
+  min-height: 508px;
+  background-color: #5496bd;
+  background-image: url("../img/intro-mask.svg"), url("../img/background-photo.jpg");
+  background-repeat: no-repeat;
+  background-position: center calc(100% + 1px), center -80px;
+  padding: 76px;
 }
 
 .feature {
-    text-align: center;
-    padding-top: 61px;
-    padding-bottom: 56px;
-    padding-left: 350px;
-    padding-right: 350px;
+  text-align: center;
+  padding-top: 61px;
+  padding-bottom: 56px;
+  padding-left: 350px;
+  padding-right: 350px;
 }
 
 .feature__title {
-    font-size: 21px;
-    font-weight: bold;
-    line-height: 1.24;
-    color: #000000;
-    margin: 0 0 38px;
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 1.24;
+  color: #000000;
+  margin: 0 0 38px;
 }
 
 .feature__text {
-    line-height: 1.86;
-    margin: 0;
+  line-height: 1.86;
+  margin: 0;
 }
 
 .main-city {
-    display: flex;
+  display: flex;
 }
 
 .main-city-right .main-photo {
-    order: 2;
+  order: 2;
 }
 
 .main-photo {
-    width: 800px;
+  width: 800px;
 }
 
 .main-photo img {
-    display: block;
+  display: block;
 }
 
 .main-sign {
-    width: 400px;
-    text-align: center;
-    color: #ffffff;
-    background-color: #81b3d2;
-    padding: 46px 60px 64px;
+  width: 400px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #81b3d2;
+  padding: 46px 60px 64px;
 }
 
 .main-sign h3 {
-    font-size: 21px;
-    font-weight: bold;
-    margin: 0 0 10px;
+  font-size: 21px;
+  font-weight: bold;
+  margin: 0 0 10px;
 }
 
 .main-sign__number {
-    margin: 0 0 10px;
+  margin: 0 0 10px;
 }
 
 .main-sign__text {
-    margin: 0;
+  margin: 0;
 }
 
 .features-list {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .features-list li {
-    width: 400px;
-    padding: 60px 74px 85px;
+  width: 400px;
+  padding: 60px 74px 85px;
 }
 
 .features h3 {
-    font-size: 21px;
-    font-weight: bold;
-    line-height: 1;
-    text-align: center;
-    color: #000000;
-    margin: 0 0 31px;
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 1;
+  text-align: center;
+  color: #000000;
+  margin: 0 0 31px;
 }
 
 .features p {
-    text-align: center;
-    margin: 0;
+  text-align: center;
+  margin: 0;
 }
 
 .main-comfort {
-    background-color: #eeeeee;
+  background-color: #eeeeee;
 }
 
 .main-comfort-item__title {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .main-comfort-item__number {
-    margin: 10px;
+  margin: 10px;
 }
 
 .main-comfort-item__text {
-    margin: 0;
+  margin: 0;
 }
 
 .main-comfort-item {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .main-comfort-item li {
-    width: 400px;
-    padding: 50px 60px 64px;
+  width: 400px;
+  padding: 50px 60px 64px;
 }
 
 .main-comfort h3 {
-    font-size: 21px;
-    font-weight: bold;
-    text-align: center;
-    color: #000000;
-    margin: 0;
+  font-size: 21px;
+  font-weight: bold;
+  text-align: center;
+  color: #000000;
+  margin: 0;
 }
 
 .main-comfort p {
-    text-align: center;
+  text-align: center;
 }
 
 .detail {
-    font-weight: bold;
-    line-height: 1.5;
-    color: #ffffff;
-    background-color: #81b3d2;
-    padding: 8px 17px;
+  font-weight: bold;
+  line-height: 1.5;
+  color: #ffffff;
+  background-color: #81b3d2;
+  padding: 8px 17px;
 }
 
 .detail:hover {
-    background-color: #669ec0;
+  background-color: #669ec0;
 }
 
 .detail:active {
-    color: rgba(255, 255, 255, 0.3);
-    background-color: #5496bd;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #5496bd;
 }
 
 .reservation {
-    font-weight: bold;
-    color: #ffffff;
-    background-color: #766357;
-    padding: 8px 16px;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #766357;
+  padding: 8px 16px;
 }
 
 .reservation:hover {
-    background-color: #604e43;
+  background-color: #604e43;
 }
 
 .reservation:active {
-    color: rgba(255, 255, 255, 0.3);
-    background-color: #503e33;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #503e33;
 }
 
 .catalog-navigation {
-    font-size: 12px;
-    line-height: 1.5;
-    color: rgba(0, 0, 0, 0.3);
+  font-size: 12px;
+  line-height: 1.5;
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .catalog-navigation__item {
-    color: #81b3d2;
-    margin: 0 33px 0 0;
+  color: #81b3d2;
+  margin: 0 33px 0 0;
 }
 
 .catalog-navigation a[href]:hover {
-    color: #81b3d2;
+  color: #81b3d2;
 }
 
 .catalog-navigation a[href]:active {
-    color: #000000;
+  color: #000000;
 }
 
 .hotels__info {
-    margin: 0 528px 0 30px;
+  margin: 0 528px 0 30px;
 }
 
 .hotels__title {
-    font-size: 21px;
-    font-weight: bold;
-    line-height: 1.24;
-    color: #000000;
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 1.24;
+  color: #000000;
 }
 
 .hotels__title:hover {
-    color: #81b3d2;
+  color: #81b3d2;
 }
 
 .hotels__title:active {
-    color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .hotels__buttons {
-    margin: 18px 0;
+  margin: 18px 0;
 }
 
 .scan {
@@ -337,92 +335,92 @@ a {
 }
 
 .scan:hover {
-    background-color: #604e43;
+  background-color: #604e43;
 }
 
 .scan:active {
-    color: rgba(255, 255, 255, 0.3);
-    background-color: #503e33;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #503e33;
 }
 
 .map__form {
-    width: 561px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 26px 55px 55px;
+  width: 561px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 26px 55px 55px;
 }
 
 .map__item__option {
-    width: 275px;
+  width: 275px;
 }
 
 .button {
-    font-size: 21px;
-    font-weight: bold;
-    color: #ffffff;
-    background-color: #81b3d2;
-    padding: 20px 198px;
-    margin: 55px 0 0;
-    border: 0;
+  font-size: 21px;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #81b3d2;
+  padding: 20px 198px;
+  margin: 55px 0 0;
+  border: 0;
 }
 
 .button:hover {
-    background-color: #669ec0;
+  background-color: #669ec0;
 }
 
 .button:active {
-    color: rgba(255, 255, 255, 0.3);
-    background-color: #5496bd;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #5496bd;
 }
 
 .social-button {
-    background-color: #81b3d2;
+  background-color: #81b3d2;
 }
 
 .by__price {
-    color: #81b3d2;
+  color: #81b3d2;
 }
 
 .map {
-    padding: 57px 0 0;
+  padding: 57px 0 0;
 }
 
 .map__title {
-    font-size: 30px;
-    font-weight: bold;
-    line-height: 1.2;
-    color: #000000;
-    text-align: center;
-    margin: 0 0 30px;
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 1.2;
+  color: #000000;
+  text-align: center;
+  margin: 0 0 30px;
 }
 
 .map__desc {
-    line-height: 1.71;
-    text-align: center;
-    margin: 0 383px 52px;
+  line-height: 1.71;
+  text-align: center;
+  margin: 0 383px 52px;
 }
 
 .map__item {
-    display: inline-flex;
-    font-weight: bold;
-    line-height: 1.86;
-    color: #000000;
-    margin: 30px 0 0;
+  display: inline-flex;
+  font-weight: bold;
+  line-height: 1.86;
+  color: #000000;
+  margin: 30px 0 0;
 }
 
 .map__item label {
-    margin: 0 29px 0 0;
+  margin: 0 29px 0 0;
 }
 
 .map__item__button {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .main-footer {
-    display: flex;
-    background-color: #f2f2f2;
-    padding: 36px 0;
-    margin: 0;
+  display: flex;
+  background-color: #f2f2f2;
+  padding: 36px 0;
+  margin: 0;
 }
 
 .footer-social {
@@ -434,12 +432,32 @@ a {
 }
 
 .footer-social li {
-    padding: 10px 12px 6px;
-    margin: 0 6px 0 0;
-    width: 46px;
-    height: 48px;
-    background-color: #81b3d2;
-    list-style: none;
+  padding: 14px 14px 6px;
+  margin: 0 6px 0 0;
+  width: 46px;
+  height: 48px;
+  background-color: #81b3d2;
+  list-style: none;
+}
+
+.footer-social li:hover {
+  background-color: #669ec0;
+}
+
+.footer-social li:active {
+  background-color: #5496bd;
+}
+
+.social-button path {
+  fill: #ffffff;
+}
+
+.social-button:hover path {
+  fill: #ffffff;
+}
+
+.social-button:active path {
+  fill: #88b6d1;
 }
 
 .main-footer-tag {
@@ -453,21 +471,33 @@ a {
 }
 
 .main-footer-tag b {
-    line-height: 1.86;
-    color: #000000;
+  line-height: 1.86;
+  color: #000000;
 }
 
 .footer-copyright b {
-    line-height: 1.86;
-    font-weight: normal;
-    color: #000000;
-    margin: 0;
+  line-height: 1.86;
+  font-weight: normal;
+  color: #000000;
+  margin: 0;
 }
 
 .footer-copyright {
   width: 400px;
-    margin: 0;
-    padding: 10px 95px;
+  margin: 0;
+  padding: 10px 95px;
+}
+
+.footer-copyright a path {
+  fill: #231f20;
+}
+
+.footer-copyright a:hover path {
+  fill: #81b3d2;
+}
+
+.footer-copyright a:active path {
+  fill: #bdbbbc;
 }
 
 .footer-copyright img {
@@ -477,147 +507,159 @@ a {
 /* Стили для страницы hotel.html */
 
 .services-infrastructure h2 {
-    margin: 0;
+  margin: 0;
 }
 
 .compare {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 32px 73px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px 73px;
 }
 
 .compare h2 {
-    margin: 0 49px 0 0;
+  margin: 0 49px 0 0;
 }
 
 .compare p {
-    margin: 0 40px 0 0;
+  margin: 0 40px 0 0;
 }
 
 .hotels__list {
-    list-style: none;
-    padding: 0;
-    margin-top: 0;
+  list-style: none;
+  padding: 0;
+  margin-top: 0;
 }
 
 .catalog-navigation {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .catalog-navigation li {
-    margin: 0 33px 0 0;
+  margin: 0 33px 0 0;
 }
 
 .hotels__item {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 30px 72px;
-    border-bottom: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 30px 72px;
+  border-bottom: 1px solid black;
 }
 
 .hotels__rate {
-    width: 108px;
-    text-align: right;
-    margin-left: 0;
+  width: 108px;
+  text-align: right;
+  margin-left: 0;
 }
 
 .hotels__rate-star {
-    display: inline-block;
-    height: 17px;
-    margin: 0 0 52px;
-    background-image: url("../img/star.svg");
-    background-size: 22px 17px;
+  display: inline-block;
+  height: 17px;
+  margin: 0 0 52px;
+  background-image: url("../img/star.svg");
+  background-size: 22px 17px;
 }
 
 .star-1 {
-    width: 18px;
+  width: 18px;
 }
 
 .star-2 {
-    width: 41px;
+  width: 41px;
 }
 
 .star-3 {
-    width: 64px;
+  width: 64px;
 }
 
 .star-4 {
-    width: 87px;
+  width: 87px;
 }
 
 .star-5 {
-    width: 110px;
+  width: 110px;
 }
 
 .hotels__rate-text {
-    color: #666666;
-    margin: 0;
+  color: #666666;
+  margin: 0;
 }
 
 .hotels__type {
-    margin: 0;
+  margin: 0;
 }
 
 .hotels__price {
-    margin: 0;
+  margin: 0;
 }
 
 .map__item button {
-    margin: 0;
-    padding: 13px;
-    border: 0;
-    background-color: #f2f2f2;
+  margin: 0;
+  padding: 13px;
+  border: 0;
+  background-color: #f2f2f2;
 }
 
-.map__item operator {
+.minus image {
   width: 21px;
   height: 21px;
 }
 
+.map__item button path {
+  fill: #cacaca;
+}
+
+.map__item button:hover path {
+  fill: #000000;
+}
+
+.map__item button:active path {
+  fill: #81b3d2;
+}
+
 .map__item input {
-    margin: 0;
-    padding: 13px;
-    border: 0;
-    background-color: #f2f2f2;
+  margin: 0;
+  padding: 13px;
+  border: 0;
+  background-color: #f2f2f2;
 }
 
 .child {
-    padding: 0 0 0 51px;
+  padding: 0 0 0 51px;
 }
 
 .number {
-    width: 38px;
+  width: 38px;
 }
 
 .pointer {
-    width: 11px;
-    height: 10px;
+  width: 11px;
+  height: 10px;
 }
 
 .pointer__up path {
-    fill: #cacaca;
+  fill: #cacaca;
 }
 
 .pointer__up:hover path {
-    fill: #000000;
+  fill: #000000;
 }
 
 .pointer__up:active path {
-    fill: #81b3d2;
+  fill: #81b3d2;
 }
 
 .pointer__down path {
-    fill: #81b3d2;
+  fill: #81b3d2;
 }
 
 .pointer__down:hover path {
-    fill: #000000;
+  fill: #000000;
 }
 
 .pointer__down:active path {
-    fill: #81b3d2;
+  fill: #81b3d2;
 }
