--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,9 @@ a {
 }
 
 .map__item label {
-  margin: 0 29px 0 0;
+  display: flex;
+  margin: 0 30px 0 0;
+  padding: 10px 0;
 }
 
 .map__item__button {
@@ -561,7 +563,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   padding: 30px 72px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .hotels__rate {
@@ -613,12 +615,18 @@ a {
   background-color: #f2f2f2;
 }
 
+.hotels__desc {
+  display: flex;
+  width: 180px;
+}
+
 .hotels__type {
   margin: 0;
 }
 
 .hotels__price {
   margin: 0;
+  margin-left: auto;
 }
 
 .map__item button {
