--- a/css/style.css
+++ b/css/style.css
@@ -409,10 +409,18 @@ a {
   margin: 30px 0 0;
 }
 
-.map__item label {
-  display: flex;
-  margin: 0 30px 0 0;
-  padding: 10px 0;
+.map__item-arrival__date {
+  margin: 0 21px 0 0;
+  padding: 12px 0;
+}
+
+.map__item-departure__date {
+  margin: 0 17px 0 0;
+  padding: 12px 0;
+}
+
+.map__item__gross {
+
 }
 
 .map__item__button {
