--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ a {
   background-color: #5496bd;
   background-image: url("../img/intro-mask.svg"), url("../img/background-photo.jpg");
   background-repeat: no-repeat;
-  background-position: center calc(100% + 1px), center -80px;
+  background-position: center calc(100% + 2px), center -80px;
   padding: 76px;
 }
 
@@ -343,11 +343,21 @@ a {
   background-color: #503e33;
 }
 
+.map__image {
+  text-align: center;
+  min-height: 475px;
+  background-image: url(../img/map.jpg);
+  background-position-y: 35px;
+  padding-bottom: 78px;
+}
+
 .map__form {
   width: 561px;
   margin-left: auto;
   margin-right: auto;
   padding: 55px;
+  box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+  background-color: #ffffff;
 }
 
 .map__item__option {
@@ -414,10 +424,11 @@ a {
 }
 
 .map__item-residence {
-  width: 95px;
+  width: 110px;
   display: flex;
   align-items: center;
-  margin: 0 32px 0 0;
+  margin: 0 20px 0 0;
+  padding: 0;
 }
 
 .map__item-resident {
@@ -520,6 +531,131 @@ a {
 
 /* Стили для страницы hotel.html */
 
+/* Стили для фильтра */
+
+.services {
+  background-image: url("../img/filter-background.jpg");
+  background-position: 0px -365px;
+}
+
+.filter-range {
+  width: 314px;
+  margin: 32px auto;
+  /* для демо */
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.filter-range-title {
+  margin-bottom: 9px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.price-controls {
+  position: relative;
+  height: 36px;
+  margin-bottom: 20px;
+  font-size: 0;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+}
+
+.price-controls::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2px;
+  height: 22px;
+  background: #ffffff;
+  transform: translate(-50%, -50%);
+}
+
+.price-controls label {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 38px;
+  vertical-align: top;
+  cursor: pointer;
+}
+
+.price-controls .min-price, .price-controls .max-price {
+  width: 138px;
+  padding-left: 65px;
+}
+
+.price-controls input {
+  width: 50px;
+  margin: 0;
+  color: inherit;
+  font: inherit;
+  background: none;
+  border: none;
+}
+
+.range-controls {
+  position: relative;
+  margin-bottom: 32px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+  width: 80%;
+  height: 2px;
+  background: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  top: -9px;
+  width: 20px;
+  height: 20px;
+  background: #ababab;
+  border: 8px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
+}
+
+.range-toggle:hover {
+  background: #1c4f80;
+}
+
+.range-toggle-min {
+  left: 0;
+}
+
+.range-toggle-max {
+  left: 80%;
+}
+
+.btn-transparent {
+  display: block;
+  margin: 0 auto;
+  padding: 6px 35px;
+
+  font-size: 14px;
+  line-height: 20px;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  background: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.btn-transparent:hover {
+  color: #000000;
+  background: #ffffff;
+}
+
 .services-infrastructure h2 {
   margin: 0;
 }
@@ -536,6 +672,7 @@ a {
 
 .compare p {
   margin: 0 40px 0 0;
+  font-size: 12px;
 }
 
 .hotels__list {
