--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,7 @@ a {
 
 .site-navigation li {
   width: 203px;
-  padding-right: 15px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 18px 20px 17px;
   word-break: break-all;
 }
 
@@ -131,7 +129,7 @@ a {
   font-weight: bold;
   line-height: 1.24;
   color: #000000;
-  margin: 0 0 38px;
+  margin: 0 0 22px;
 }
 
 .feature__text {
@@ -534,6 +532,7 @@ a {
 /* Стили для фильтра */
 
 .services-infrastructure {
+  width: 1120px;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -555,7 +554,7 @@ a {
 .services-infrastructure__home label {
   display: flex;
   align-items: center;
-  margin: 0;
+  margin: 0 0 5px;
 }
 
 .services-infrastructure__home p {
